--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -11,7 +11,7 @@
         <input matInput placeholder="Enter your password" type="password" [formControl]="password" required>
       </mat-form-field>
 
-      <button mat-raised-button type="submit" color="accent">Sign In</button>
+      <button mat-raised-button type="submit" color="primary">Sign In</button>
       <button mat-raised-button (click)="googleLogin()" >Google</button>
       <button mat-raised-button (click)="facebookLogin()" >Facebook</button>
 
