--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -11,7 +11,7 @@
         <input matInput placeholder="Enter your password" type="password" [formControl]="password" required>
       </mat-form-field>
 
-      <button mat-raised-button type="submit" color="accent">Sign Up</button>
+      <button mat-raised-button type="submit" color="primary">Sign Up</button>
     </form>
   </section>
 </main>
