--- a/src/app/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/user/user-dashboard/user-dashboard.component.html
@@ -16,6 +16,7 @@
           <p>{{user.email}}</p>
         </div>
       </div>
+      <app-post-dashboard></app-post-dashboard>
     </div>
     <div [hidden]="!editing">
       <div class="profile">
