--- a/src/app/post/post-dashboard/post-dashboard.component.html
+++ b/src/app/post/post-dashboard/post-dashboard.component.html
@@ -1,3 +1,15 @@
-<mat-slide-toggle color="primary">
-Slide me!
-</mat-slide-toggle>
+<mat-card>
+  <section>
+    <form [formGroup]="postForm" (ngSubmit)="savePost()">
+      <mat-form-field>
+        <textarea matInput placeholder="Post content" formControlName="content" cols="20" rows="5"></textarea>
+      </mat-form-field>
+      <mat-slide-toggle formControlName="isPublic"  color="primary">
+        Public
+      </mat-slide-toggle>
+      <button mat-raised-button color="primary" style="float:right;" type="submit">Share</button>
+    </form>
+  </section>
+</mat-card>
+
+<app-post-list></app-post-list>
