--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -1,3 +1,9 @@
-<p>
-  post-list works!
-</p>
+<main *ngFor="let post of posts | async">
+  <mat-card>
+    <mat-card-content>
+      <mat-card-title>{{post.userName}}</mat-card-title>
+      <mat-card-subtitle>{{post.date}}</mat-card-subtitle>
+      <p>{{post.content}}</p>
+    </mat-card-content>
+  </mat-card>
+</main>
