--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -3,7 +3,10 @@
     <form [formGroup]="signUpForm" (ngSubmit)="signUp()">
       <h2>Welcome to SocialWeb</h2>
       <p>Let's get started!</p>
-
+      
+      <mat-form-field [formGroup]="signUpForm">
+        <input matInput placeholder="Enter your name" [formControl]="name" required>
+      </mat-form-field>
       <mat-form-field [formGroup]="signUpForm">
         <input matInput placeholder="Enter your email" [formControl]="email" required>
       </mat-form-field>
